src/app/components/common/card/card.style.scss
@import "./src/app/style/_variables";

.card {
    font-family:  $font-face1;
    padding-bottom: 20px;

    .card-header {
      padding-bottom: 15px;

      .icon, .title {
        color: $orange;
        font-size: 16px;
        font-weight: bold;
      }

      .options {
        padding-left: 55%;
        color: $orange;
        display: inline;

        a {
          color: $orange;
          text-decoration: underline;
          cursor: pointer;
          font-size: 10px;
        }  
      }
    }

    .card-body {
      width: 90%;
      padding-bottom: 0;
      margin-bottom: 0;
      padding-left: 10px;

      .card-text::before {
        content: "$ ";
      }

      .card-text::after {
        content: "| ";
        animation: blinker 1s linear infinite;
      }

      .card-text {
        font-size: 12px;
        display: block;
      }

      .skillCardContainer {
        width: 85%;
      }

      .skillContainer, 
      .hobbiesContainer {
        display: inline;
        padding: 5px 10px;        
      }

      // Effects for blinking
      @keyframes blinker {  
        50% { opacity: 0; }
      }
    }
  }

